# realhand-gui

./: pyproject.toml  requirements.txt
.github/workflows/: release.yml
src/realhand_gui/: gui.py  main.py  robot_worker.py  utils.py
src/realhand_gui/config/: constants.py  setting.yaml
